--- a/notebooks/Day1_Visualization.ipynb
+++ b/notebooks/Day1_Visualization.ipynb
@@ -11,6 +11,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "%matplotlib inline"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
