improved task descriptions for day 3, renamed day 3 to day 34 because it took way more than 1 doay for the notebook

--- a/notebooks/Day1_Visualization.ipynb
+++ b/notebooks/Day1_Visualization.ipynb
@@ -7,14 +7,18 @@
    },
    "source": [
     "# Table of Contents\n",
-    " <p><div class=\"lev1 toc-item\"><a href=\"#Read-Tutorial-on-matplotlib\" data-toc-modified-id=\"Read-Tutorial-on-matplotlib-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Read Tutorial on matplotlib</a></div><div class=\"lev1 toc-item\"><a href=\"#Plot-the-Normal-Distribution\" data-toc-modified-id=\"Plot-the-Normal-Distribution-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Plot the Normal Distribution</a></div><div class=\"lev2 toc-item\"><a href=\"#Now-as-Boxplots\" data-toc-modified-id=\"Now-as-Boxplots-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Now as Boxplots</a></div><div class=\"lev2 toc-item\"><a href=\"#Finally-let's-do-some-Histograms\" data-toc-modified-id=\"Finally-let's-do-some-Histograms-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>Finally let's do some Histograms</a></div>"
+    " <p><div class=\"lev1\"><a href=\"#Read-Tutorial-on-matplotlib\">Read Tutorial on matplotlib</a></div><div class=\"lev1\"><a href=\"#Plot-the-Normal-Distribution\">Plot the Normal Distribution</a></div><div class=\"lev2\"><a href=\"#Now-as-Boxplots\">Now as Boxplots</a></div><div class=\"lev2\"><a href=\"#Finally-let's-do-some-Histograms\">Finally let's do some Histograms</a></div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": [
@@ -62,13 +66,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "run_control": {
+     "frozen": false,
+     "read_only": false
+    }
    },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "hide_input": false,
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -84,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.12"
   },
   "nav_menu": {},
   "toc": {
